# jusk

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  init_data.json  pyproject.toml
apps/projects/: admin.py  models.py  urls.py  views.py
apps/projects/forms/: project.py
apps/projects/migrations/: 0001_initial.py  0002_initial.py
apps/projects/templates/projects/: edit_project.html  join_requests.html  project.html  project_selection.html
apps/tasks/: admin.py  models.py  serializers.py  urls.py  views.py
apps/tasks/forms/: task.py
apps/tasks/migrations/: 0001_initial.py  0002_initial.py
apps/tasks/services/: task_checker.py  task_history.py  tasks.py
apps/tasks/static/js/tasks/: selectProject.js
apps/tasks/templates/tasks/: comments__time_logs__history.html  comments__timelogs__history.html  comments__work_logs__history.html  create_task.html  edit_task.html  history_entry.html  home.html  new_task.html  task.html
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  typess.py  urls.py
theme/static_src/: package-lock.json  package.json
theme/static_src/src/: style.css
theme/templates/: base.html  form_errors.html  header.html  sidebar.html
theme/templates/icons/: house.html  pencil-square.html  plus.html  presentation-chart-line.html  queue-list.html  trash.html
